add index and bootstrap

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.community1</groupId>
     <artifactId>springbootcommunity</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>springbootcommunity</name>
+    <name>SpringBootCommunity</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -28,6 +28,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
     </dependencies>
 
