--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ server.port = 8088
 github.client.id = 8282249c47b5c8ad111e
 github.client.secret = e47e9d943f884aad2482ce358293379f6599ede4
 github.redirect.uri = http://localhost:8088/callback
+
+spring.datasource.url=jdbc:h2:~/community
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
