--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,8 @@ spring.datasource.url=jdbc:h2:~/communityy
 spring.datasource.username=sa
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.show-sql=true
 
 mybatis.configuration.map-underscore-to-camel-case=true
+
+
