--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.8.sec06</version>
+            <version>1.2.60</version>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
