--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ spring.devtools.restart.enabled=true
 #spring.devtools.restart.additional-paths=src/main/java
 #¼àÌıÄ¿Â¼
 
+logging.level.com.community1.springbootcommunity.mapper=debug
+
