'二级回复仍有问题'

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,5 +23,5 @@ spring.devtools.restart.enabled=true
 #spring.devtools.restart.additional-paths=src/main/java
 #¼àÌýÄ¿Â¼
 
-logging.level.com.community1.springbootcommunity.mapper=debug
+logging.level.com.community1.springbootcommunity.mapper=trace
 
