--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <description>Demo project of Spring Boot</description>
 
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>1.8.221</java.version>
     </properties>
 
     <dependencies>
@@ -144,7 +144,7 @@
                 <configuration>
                     <url>jdbc:mysql://localhost:3366/community1</url>
                     <user>root</user>
-                    <password>0928gaominYg@</password>
+                    <password>0928gaoming@</password>
                     <driver>com.mysql.cj.jdbc.Driver</driver>
                 </configuration>
                 <dependencies>
