--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.username=root
 spring.datasource.password=0928gaoming@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.flyway.baseline-on-migrate=true
 
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=com.community1.springbootcommunity.mapper
